<resources>
    <string name="app_name">FileManager</string>
    <string name="nav_quick_access">快速访问</string>
    <string name="nav_recent_access">最近访问</string>
    <string name="nav_picture">图片</string>
    <string name="nav_vedio">视频</string>
    <string name="nav_music">音乐</string>
    <string name="nav_doc">文档</string>
    <string name="nav_apk">安装包</string>
    <string name="nav_application">应用管理</string>
    <string name="nav_ftp">FTP服务器</string>
    <string name="nav_settings">设置</string>
    <string name="paste">粘贴</string>
    <string name="search">搜索</string>
    <string name="sort">排序</string>
    <string name="sort_file">排序方式</string>
    <string name="sort_dir">目录排序方式</string>
    <string name="layout_lin">网格视图</string>
    <string name="layout_grid">网格视图</string>
    <string name="exit">退出应用</string>
    <string name="home">Home</string>
    <string name="exit_tip">再按一次退出应用</string>
    <string name="noappfound">启动应用失败</string>
    <string name="appicon">appicon</string>
    <string name="not_allowed">无法启动</string>
    <string name="app_backup_succeed">软件备份成功</string>
    <string name="app_backup_failed">软件备份失败</string>

    <!--app option -->
    <string name="app_operation_open">打开</string>
    <string name="app_operation_backup">备份</string>
    <string name="app_operation_uninstall">卸载</string>
    <string name="app_operation_attribute">属性</string>
    <string name="app_operation_share">分享</string>
</resources>
