<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_paste"
        android:title="@string/paste"
        app:showAsAction="always"
        android:visible="false"/>
    <item android:id="@+id/menu_search"
        android:title="@string/search"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_search"
        />
    <item android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_white_48dp"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_sort"
        android:title="@string/sort">
        <menu>
            <item android:id="@+id/menu_sort_file"
                android:title="@string/sort_file"/>
            <item android:id="@+id/menu_sort_dir"
                android:title="@string/sort_dir"/>
            </menu>
        </item>
    <item android:id="@+id/menu_layout"
        android:title="@string/layout_lin"
        />
    <item android:id="@+id/menu_exit"
        android:title="@string/exit"
        android:orderInCategory="999"
        />
</menu>